--- a/src/client/src/app/map/map.component.html
+++ b/src/client/src/app/map/map.component.html
@@ -219,7 +219,7 @@
 												</mat-expansion-panel-header>
 												<div class="row layers-indicator">
 													<div>
-														<button class="button-row" mat-icon-button>
+														<button class="button-row" (click)="openDialog('potencial_intensificacao')" mat-icon-button>
 													    <mat-icon class="iconInfo">info</mat-icon>
 													  </button>
 													</div>
