Inserção do dado Dado Classes de Degradação

--- a/src/client/src/app/map/map-mobile.component.html
+++ b/src/client/src/app/map/map-mobile.component.html
@@ -138,6 +138,9 @@
 																  <mat-radio-button (change)="opcoesVisualizacao($event)" value="municipios-pastagens-degraded">
 																  	Municípios
 																  </mat-radio-button>
+																  <mat-radio-button (change)="opcoesVisualizacao($event)" value="classes_degradacao_pastagem">
+																	Classes de Degradação
+																</mat-radio-button>
 																</mat-radio-group>
 															</div>
 														</div>
