--- a/src/client/src/app/map/map.component.html
+++ b/src/client/src/app/map/map.component.html
@@ -156,6 +156,9 @@
 																  </mat-radio-button>
 																  <mat-radio-button (change)="opcoesVisualizacao($event)" value="municipios-pastagens-degraded">
 																  	Municípios
+																	</mat-radio-button>
+																	<mat-radio-button (change)="opcoesVisualizacao($event)" value="classes_degradacao_pastagem">
+																  	Classes de Degradação
 																  </mat-radio-button>
 																</mat-radio-group>
 															</div>
@@ -598,6 +601,7 @@
 										<div>
 											<img *ngIf="layerPastureDegradedShow == 'areas-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded&format=image%2Fpng">
 											<img *ngIf="layerPastureDegradedShow == 'municipios-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded_regions_municipios&format=image%2Fpng">
+											<img *ngIf="layerPastureDegradedShow == 'classes_degradacao_pastagem'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=classes_degradacao_pastagem&format=image%2Fpng">											
 										</div>
 									</mat-expansion-panel>
 								</div>
