--- a/src/client/src/app/map/map.component.html
+++ b/src/client/src/app/map/map.component.html
@@ -112,10 +112,10 @@
 								<div class=" separacaoLayers" id="layers_degradacao">
 									<div class="row">
 										<div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 slider-layer">
-											<mat-slide-toggle (change)="layerchecked('pastagem_degradada', $event)"></mat-slide-toggle>
+											<mat-slide-toggle (change)="layerchecked('classes_degradacao_pastagem', $event)"></mat-slide-toggle>
 										</div>
 										<div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10 expansion-layer">
-											<mat-expansion-panel>
+											<!-- <mat-expansion-panel>
 												<mat-expansion-panel-header [collapsedHeight]="'60px'" [expandedHeight]="'60px'" class="expansion-header-layer">
 													<div>
 															<h5 class="nameLayers"><b>Pastagem Degradada (2017)</b></h5>
@@ -164,6 +164,37 @@
 															</div>
 														</div>
 													</div>
+												</div>
+											</mat-expansion-panel> -->
+											<mat-expansion-panel>
+												<mat-expansion-panel-header [collapsedHeight]="'60px'" [expandedHeight]="'60px'" class="expansion-header-layer">
+													<div>
+															<h5 class="nameLayers"><b>Pastagem Degradada - 2018</b></h5>
+													</div>
+												</mat-expansion-panel-header>
+												<div class="row layers-indicator">
+													<div>
+														<button class="button-row" (click)="openDialog('pastagem_degradada')" mat-icon-button>
+													    <mat-icon class="iconInfo">info</mat-icon>
+													  </button>
+													</div>
+													<div class="value-indicators"> 
+														{{ indicatorPastureDegraded | number:'3.0-0' }} ha com
+														<p style="margin-bottom: 0px">indícios de degradação </p>
+														<p class="stylePercentual">({{ indicatorPastureDegradedPercentual | number:'1.1-2'}}% do(a) {{ regionTypeBr }})</p>
+													</div>
+													<!-- <div class="buttons-download-past">
+															<a style="margin-left: 10px;"  href="{{ linkDownload }}">
+																<button mat-raised-button href (click)="buttonDownload('csv', 'pasture_degraded', $event)" value='buttonCSV'>
+																	<b>CSV</b>
+																</button>
+															</a>
+															<a style="margin-left: 10px;"  href="{{ linkDownload }}">
+																<button mat-raised-button (click)="buttonDownload('shp', 'pasture_degraded', $event)">
+																	<b>SHP</b>
+																</button>
+															</a>
+													</div> -->
 												</div>
 											</mat-expansion-panel>
 										</div>
@@ -599,8 +630,8 @@
 											</h6>
 										</mat-expansion-panel-header>
 										<div>
-											<img *ngIf="layerPastureDegradedShow == 'areas-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded&format=image%2Fpng">
-											<img *ngIf="layerPastureDegradedShow == 'municipios-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded_regions_municipios&format=image%2Fpng">
+											<!-- <img *ngIf="layerPastureDegradedShow == 'areas-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded&format=image%2Fpng"> -->
+											<!-- <img *ngIf="layerPastureDegradedShow == 'municipios-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded_regions_municipios&format=image%2Fpng"> -->
 											<img *ngIf="layerPastureDegradedShow == 'classes_degradacao_pastagem'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=classes_degradacao_pastagem&format=image%2Fpng">											
 										</div>
 									</mat-expansion-panel>
