--- a/src/client/src/app/map/map-mobile.component.html
+++ b/src/client/src/app/map/map-mobile.component.html
@@ -105,13 +105,13 @@
 								<div class="separacaoLayers" id="layers_degradacao">
 									<div class="row">
 					    			<div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 slider-layer">
-											<mat-slide-toggle (change)="layerchecked('pastagem_degradada', $event)"></mat-slide-toggle>
+											<mat-slide-toggle (change)="layerchecked('classes_degradacao_pastagem', $event)"></mat-slide-toggle>
 										</div>
 										<div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10 expansion-layer">
 											<mat-expansion-panel>
 												<mat-expansion-panel-header [collapsedHeight]="'60px'" [expandedHeight]="'60px'" class="expansion-header-layer">
 													<div>
-														<h5 class="nameLayers"><b>Pastagem Degradada (2017)</b></h5>
+														<h5 class="nameLayers"><b>Pastagem Degradada - 2018</b></h5>
 													</div>
 												</mat-expansion-panel-header>
 												<div class="row layers-indicator">
@@ -126,7 +126,7 @@
 														<p class="stylePercentual">({{ indicatorPastureDegradedPercentual | number:'1.1-2'}}% do(a) {{ regionTypeBr }})</p> 
 													</div>
 												</div>
-												<div class="layers-options">
+												<!-- <div class="layers-options">
 													<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 font-size-geral">
 														<div class="example-selected-value">Opções de visualização:</div>
 														<div class="row">
@@ -145,7 +145,7 @@
 															</div>
 														</div>
 													</div>
-												</div>
+												</div> -->
 											</mat-expansion-panel>
 										</div>
 									</div>
@@ -407,8 +407,9 @@
 															</div>
 														</mat-expansion-panel-header>
 														<div>
-															<img *ngIf="layerPastureDegradedShow == 'areas-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded&format=image%2Fpng">
-															<img *ngIf="layerPastureDegradedShow == 'municipios-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded_regions_municipios&format=image%2Fpng">
+															<!-- <img *ngIf="layerPastureDegradedShow == 'areas-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded&format=image%2Fpng">
+															<img *ngIf="layerPastureDegradedShow == 'municipios-pastagens-degraded'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=pasture_degraded_regions_municipios&format=image%2Fpng"> -->
+															<img *ngIf="layerPastureDegradedShow == 'classes_degradacao_pastagem'" src="http://ows.lapig.iesa.ufg.br/ows?EXCEPTIONS=application%2Fvnd.ogc.se_xml&TRANSPARENT=TRUE&VERSION=1.1.1&SERVICE=WMS&REQUEST=GetLegendGraphic&layer=classes_degradacao_pastagem&format=image%2Fpng">
 														</div>
 													</mat-expansion-panel>
 												</div>
@@ -577,7 +578,24 @@
 				              </tr>
 				            </tbody>
 				          </table>
-							  </mat-tab>
+								</mat-tab>
+								<mat-tab label="Pastagem Degradada">
+										<h6>
+												<b>Áreas de Pastagem com Indício de Degradação - {{ regionSelected }}</b>
+											</h6>
+											<!-- <p class="info_clique_mapa">*Área em hectares</p> -->
+									<ngx-charts-advanced-pie-chart
+										[view]="[450, auto]"
+										[scheme]="colorSchemeDegradation"
+										[results]="chartDegradationResult"
+										[gradient]="gradient"
+										>
+										<ng-template #tooltipTemplate let-model="model">
+												{{model.name}}: {{ model.value | number:'1.0-0' }} ha
+												<pre>{{ model.value}} ha</pre>
+										</ng-template>
+									</ngx-charts-advanced-pie-chart>
+								</mat-tab>
 							  <mat-tab label="Pontos Campo" *ngIf="this.pontos_parada">
 							  	<div class="row" *ngIf="this.infoFeature.foto == ''">
 							  		<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 instrucoesPontosCampo">
