--- a/src/client/src/app/map/map-mobile.component.html
+++ b/src/client/src/app/map/map-mobile.component.html
@@ -585,10 +585,9 @@
 											</h6>
 											<!-- <p class="info_clique_mapa">*Área em hectares</p> -->
 									<ngx-charts-advanced-pie-chart
-										[view]="[450, auto]"
+										[view]="[450, 300]"
 										[scheme]="colorSchemeDegradation"
 										[results]="chartDegradationResult"
-										[gradient]="gradient"
 										>
 										<ng-template #tooltipTemplate let-model="model">
 												{{model.name}}: {{ model.value | number:'1.0-0' }} ha
