Update lotação bovina, download comentado.

--- a/src/client/src/app/map/map-mobile.component.html
+++ b/src/client/src/app/map/map-mobile.component.html
@@ -159,7 +159,7 @@
 											<mat-expansion-panel>
 												<mat-expansion-panel-header [collapsedHeight]="'60px'" [expandedHeight]="'60px'" class="expansion-header-layer">
 													<div>
-														<h5 class="nameLayers"><b>Rebanho Bovino - UA ({{ yearIndicatorLotacao }})</b></h5>
+														<h5 class="nameLayers"><b>Rebanho Bovino - UA ({{ year }})</b></h5>
 													</div>
 												</mat-expansion-panel-header>
 												<div class="row layers-indicator">
