--- a/src/client/src/app/map/map.component.html
+++ b/src/client/src/app/map/map.component.html
@@ -65,11 +65,11 @@
 																<b>CSV</b>
 															</button>
 														</a>
-														<!-- <a style="margin-left: 10px;" href="{{ linkDownload }}">
+														<a style="margin-left: 10px;" href="{{ linkDownload }}">
 															<button mat-raised-button (click)="buttonDownload('shp', 'pasture', $event)" [disabled]="contractTypeValid">
 																<b>SHP</b>
 															</button>
-														</a> -->
+														</a>
 													</div>
 												</div>
 												<div class="layers-options">
@@ -138,11 +138,11 @@
 																	<b>CSV</b>
 																</button>
 															</a>
-															<!-- <a style="margin-left: 10px;"  href="{{ linkDownload }}" matTooltip="Para download selecione uma região (Bioma / Estado / Município...)" [matTooltipDisabled]="regionSelected != 'Brasil'">
+															<a style="margin-left: 10px;"  href="{{ linkDownload }}" matTooltip="Para download selecione uma região (Bioma / Estado / Município...)" [matTooltipDisabled]="regionSelected != 'Brasil'">
 																<button mat-raised-button (click)="buttonDownload('shp', 'classes_degradacao_pastagem', $event)" [disabled]="regionSelected == 'Brasil'">
 																	<b>SHP</b>
 																</button>
-															</a> -->
+															</a>
 													</div>
 												</div>
 											</mat-expansion-panel>
@@ -213,11 +213,11 @@
 																<b>CSV</b>
 															</button>
 														</a>
-														<!-- <a style="margin-left: 10px;" href="{{ linkDownload }}">
+														<a style="margin-left: 10px;" href="{{ linkDownload }}">
 															<button mat-raised-button (click)="buttonDownload('shp', 'potencial_intensificacao_pecuaria', $event)">
 																<b>SHP</b>
 															</button>
-														</a> -->
+														</a>
 													</div>
 												</div>
 											</mat-expansion-panel>
