--- a/src/client/src/app/map/map.component.html
+++ b/src/client/src/app/map/map.component.html
@@ -253,7 +253,7 @@
 													</div>
 													<div class="buttons-download-past">
 														<a style="margin-left: 30px;" href="{{ linkDownload }}">
-															<button mat-raised-button (click)="buttonDownload(tipoCampo, 'pontos_campo', $event)" disabled=true>
+															<button mat-raised-button (click)="buttonDownload(tipoCampo, 'pontos_campo', $event)">
 																<b>SHP</b>
 															</button>
 														</a>
@@ -298,7 +298,7 @@
 													<div class="buttons-download-past">
 														<a style="margin-left: 15px;" href="{{ linkDownload }}">
 															<button mat-raised-button (click)="buttonDownload(tipoTVI, 'pontos_tvi', $event)"
-															  disabled=true>
+															>
 																<b>SHP</b>
 															</button>
 														</a>
