download pasture all brazil

--- a/src/client/src/app/map/map.component.html
+++ b/src/client/src/app/map/map.component.html
@@ -69,7 +69,7 @@
 														  matTooltip="Para download selecione uma região (Bioma / Estado / Município...)"
 														  [matTooltipDisabled]="regionSelected != 'Brasil'">
 															<button mat-raised-button (click)="buttonDownload('shp', 'pasture', $event)"
-															  [disabled]="contractTypeValid || regionSelected == 'Brasil'">
+															  [disabled]="contractTypeValid">
 																<b>SHP</b>
 															</button>
 														</a>
